teller-core/src/snapshots/teller_core__scan__tests__scan.snap
---
source: teller-core/src/scan.rs
expression: normalize_matches(res.unwrap())
---
[
    Match {
        path: "fixtures/config.yml",
        position: Some(
            (
                3,
                11,
            ),
        ),
        offset: 32,
        query: KV {
            value: "hashicorp",
            key: "key1",
            from_key: "key1",
            path: Some(
                PathInfo {
                    id: "/some/path",
                    path: "/some/path",
                },
            ),
            provider: Some(
                ProviderInfo {
                    kind: Inmem,
                    name: "test",
                },
            ),
            meta: None,
        },
    },
]
